--- a/src/FluentLocalization/FluentLocalization.csproj
+++ b/src/FluentLocalization/FluentLocalization.csproj
@@ -7,4 +7,12 @@
         <IsPackable>true</IsPackable>
         <Version>1.0.0</Version>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Folder Include="Common\TagHelpers" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    </ItemGroup>
 </Project>
