--- a/src/FluentLocalization/FluentLocalization.csproj
+++ b/src/FluentLocalization/FluentLocalization.csproj
@@ -11,8 +11,7 @@
     <ItemGroup>
       <Folder Include="Common\TagHelpers" />
     </ItemGroup>
-
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 </Project>
