--- a/src/FluentLocalization/FluentLocalization.csproj
+++ b/src/FluentLocalization/FluentLocalization.csproj
@@ -5,7 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>true</IsPackable>
-        <Version>1.0.1</Version>
+        <Version>1.0.2</Version>
+        <RepositoryUrl>https://github.com/marmeladhero/FluentLocalizationAspCore</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
